--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/goit-markup-hw-02/style.css" />
         <title>Studio</title>
     </head>
     <body>
@@ -14,7 +15,7 @@
 
             <nav>
                 <a href="#">Agencja</a>
-                <a href="#">Portfolio</a>
+                <a href="/goit-markup-hw-02/portfolio.html">Portfolio</a>
                 <a href="#">Kontakt</a>
             </nav>
 
@@ -166,7 +167,6 @@
                 </ul>
             </div>
         </main>
-
         <footer>
             <h2>
                 <a href="#">WebStudio</a>
