--- a/index.html
+++ b/index.html
@@ -15,101 +15,116 @@
     </head>
     <body>
         <header>
-            <h2>
-                <a href="#">WebStudio</a>
+            <h2 id="main-page">
+                <a href="/goit-markup-hw-02/index.html"
+                    ><span class="web">Web</span
+                    ><span class="studio">Studio</span></a
+                >
             </h2>
-
-            <nav>
+            <nav class="navigation">
                 <a href="#">Agencja</a>
                 <a href="/goit-markup-hw-02/portfolio.html">Portfolio</a>
                 <a href="#">Kontakt</a>
             </nav>
-
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+48111111111">+48111111111</a>
+            <div class="contacts">
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+48111111111">+48111111111</a>
+            </div>
         </header>
         <main>
-            <div>
-                <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-                <button>Zamów usługę</button>
+            <div class="service">
+                <h1 class="solutions">
+                    EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+                </h1>
+                <button
+                    class="button-solution"
+                    type="button"
+                    onclick="alert('reakcja')"
+                >
+                    Zamów usługę
+                </button>
             </div>
 
             <div>
-                <ul>
-                    <li>
-                        <h4>LOREM IPSUM</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
+                <div class="advantages">
+                    <ul>
+                        <li>
+                            <h4 class="our-advantages">LOREM IPSUM</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
 
-                    <li>
-                        <h4>LOREM IPSUM</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
+                        <li>
+                            <h4 class="our-advantages">LOREM IPSUM</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
 
-                    <li>
-                        <h4>LOREM IPSUM</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
+                        <li>
+                            <h4 class="our-advantages">LOREM IPSUM</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
 
-                    <li>
-                        <h4>LOREM IPSUM</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
-                </ul>
+                        <li>
+                            <h4 class="our-advantages">LOREM IPSUM</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
+                    </ul>
+                </div>
 
                 <div>
                     <h2>Czym się zajmujemy</h2>
                 </div>
 
-                <ul>
-                    <li>
-                        <img
-                            src="/goit-markup-hw-01/images/website_programming.jpg"
-                            alt="website programming"
-                            width="370"
-                            height="294"
-                        />
-                    </li>
+                <div class="work">
+                    <ul>
+                        <li>
+                            <img
+                                src="/goit-markup-hw-01/images/website_programming.jpg"
+                                alt="website programming"
+                                width="370"
+                                height="294"
+                            />
+                        </li>
 
-                    <li>
-                        <img
-                            src="/goit-markup-hw-01/images/application_development.jpg"
-                            alt="application development"
-                            width="370"
-                            height="294"
-                        />
-                    </li>
+                        <li>
+                            <img
+                                src="/goit-markup-hw-01/images/application_development.jpg"
+                                alt="application development"
+                                width="370"
+                                height="294"
+                            />
+                        </li>
 
-                    <li>
-                        <img
-                            src="/goit-markup-hw-01/images/choosing_colors.jpg"
-                            alt="choosing colors"
-                            width="370"
-                            height="294"
-                        />
-                    </li>
-                </ul>
+                        <li>
+                            <img
+                                src="/goit-markup-hw-01/images/choosing_colors.jpg"
+                                alt="choosing colors"
+                                width="370"
+                                height="294"
+                            />
+                        </li>
+                    </ul>
+                </div>
             </div>
 
-            <div>
+            <div class="stuff">
                 <h2>Nasz zespół</h2>
-                <ul>
+                <ul class="our-stuff">
                     <li>
                         <figure>
                             <img
@@ -173,8 +188,11 @@
             </div>
         </main>
         <footer>
-            <h2>
-                <a href="#">WebStudio</a>
+            <h2 id="main-page2">
+                <a href="/goit-markup-hw-02/index.html"
+                    ><span class="web">Web</span
+                    ><span class="studio">Studio</span></a
+                >
             </h2>
             <div>
                 <address>m. Warszawa, Aleje Jerozolimskie 21</address>
