--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <main>
             <div class="service">
                 <h1 class="solutions">
-                    EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+                    efektywne rowiązania dla waszego biznesu
                 </h1>
                 <button
                     class="button-solution"
@@ -50,7 +50,7 @@
                     <ul>
                         <li>
                             <h4 class="our-advantages">LOREM IPSUM</h4>
-                            <p>
+                            <p class="our-advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
@@ -59,7 +59,7 @@
 
                         <li>
                             <h4 class="our-advantages">LOREM IPSUM</h4>
-                            <p>
+                            <p class="our-advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
@@ -68,7 +68,7 @@
 
                         <li>
                             <h4 class="our-advantages">LOREM IPSUM</h4>
-                            <p>
+                            <p class="our-advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
@@ -77,7 +77,7 @@
 
                         <li>
                             <h4 class="our-advantages">LOREM IPSUM</h4>
-                            <p>
+                            <p class="our-advantages-text">
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Nam vel arcu sem. Sed non
                                 sodales dui. Interdum et malesuada
@@ -87,12 +87,12 @@
                 </div>
 
                 <div>
-                    <h2>Czym się zajmujemy</h2>
+                    <h2 class="work">Czym się zajmujemy</h2>
                 </div>
 
                 <div class="work">
-                    <ul>
-                        <li>
+                    <ul class="our-work">
+                        <li class="our-work-img">
                             <img
                                 src="/goit-markup-hw-01/images/website_programming.jpg"
                                 alt="website programming"
@@ -101,7 +101,7 @@
                             />
                         </li>
 
-                        <li>
+                        <li class="our-work-img">
                             <img
                                 src="/goit-markup-hw-01/images/application_development.jpg"
                                 alt="application development"
@@ -110,7 +110,7 @@
                             />
                         </li>
 
-                        <li>
+                        <li class="our-work-img">
                             <img
                                 src="/goit-markup-hw-01/images/choosing_colors.jpg"
                                 alt="choosing colors"
@@ -190,17 +190,21 @@
         <footer>
             <h2 id="main-page2">
                 <a href="/goit-markup-hw-02/index.html"
-                    ><span class="web">Web</span
-                    ><span class="studio">Studio</span></a
+                    ><span class="web2">Web</span
+                    ><span class="studio2">Studio</span></a
                 >
             </h2>
-            <div>
+            <div class="main-address">
                 <address>m. Warszawa, Aleje Jerozolimskie 21</address>
                 <br />
 
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+                <a class="main-address-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                ><br />
 
-                <a href="tel:+48111111111">+48111111111</a>
+                <a class="main-address-link" href="tel:+48111111111"
+                    >+48111111111</a
+                >
             </div>
         </footer>
     </body>
