--- a/portfolio.html
+++ b/portfolio.html
@@ -15,18 +15,23 @@
     </head>
     <body>
         <header>
-            <h2>
-                <a href="/goit-markup-hw-02/index.html">WebStudio</a>
+            <h2 id="main-page">
+                <a href="/goit-markup-hw-02/index.html"
+                    ><span class="web">Web</span
+                    ><span class="studio">Studio</span></a
+                >
             </h2>
 
-            <nav>
+            <nav class="navigation">
                 <a href="#">Agencja</a>
                 <a href="/goit-markup-hw-02/portfolio.html">Portfolio</a>
                 <a href="#">Kontakt</a>
             </nav>
 
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+48111111111">+48111111111</a>
+            <div class="contacts">
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+48111111111">+48111111111</a>
+            </div>
         </header>
         <main>
             <ul>
@@ -175,16 +180,23 @@
             </ul>
         </main>
         <footer>
-            <h2>
-                <a href="/goit-markup-hw-02/index.html">WebStudio</a>
+            <h2 id="main-page2">
+                <a href="/goit-markup-hw-02/index.html"
+                    ><span class="web2">Web</span
+                    ><span class="studio2">Studio</span></a
+                >
             </h2>
-            <div>
+            <div class="main-address">
                 <address>m. Warszawa, Aleje Jerozolimskie 21</address>
                 <br />
 
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+                <a class="main-address-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                ><br />
 
-                <a href="tel:+48111111111">+48111111111</a>
+                <a class="main-address-link" href="tel:+48111111111"
+                    >+48111111111</a
+                >
             </div>
         </footer>
     </body>
