--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             </div>
 
             <div class="stuff">
-                <h2>Nasz zespół</h2>
-                <ul class="our-stuff">
-                    <li>
+                <h2 class="our-stuff">Nasz zespół</h2>
+                <ul class="stuff-figures">
+                    <li class="stuff-figures-windows">
                         <figure>
                             <img
                                 src="/goit-markup-hw-01/images/Product_Designer.jpg"
