--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <ul class="our-work">
                         <li class="our-work-img">
                             <img
-                                src="/goit-markup-hw-01/images/website_programming.jpg"
+                                src="images/studio/website_programming.jpg"
                                 alt="website programming"
                                 width="370"
                                 height="294"
@@ -125,8 +125,8 @@
             <div class="stuff">
                 <h2 class="our-stuff">Nasz zespół</h2>
                 <ul class="stuff-figures">
-                    <li class="stuff-figures-windows">
-                        <figure>
+                    <li>
+                        <figure class="stuff-figures-windows">
                             <img
                                 src="/goit-markup-hw-01/images/Product_Designer.jpg"
                                 alt="John Doe Product Designer"
@@ -141,7 +141,7 @@
                     </li>
 
                     <li>
-                        <figure>
+                        <figure class="stuff-figures-windows">
                             <img
                                 src="/goit-markup-hw-01/images/Frontend_Developer.jpg"
                                 alt="John Doe Frontend Developer"
@@ -156,7 +156,7 @@
                     </li>
 
                     <li>
-                        <figure>
+                        <figure class="stuff-figures-windows">
                             <img
                                 src="/goit-markup-hw-01/images/Marketing.jpg"
                                 alt="John Doe Marketing"
