--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                         <li class="our-work-img">
                             <img
-                                src="/goit-markup-hw-01/images/application_development.jpg"
+                                src="images/studio/application_development.jpg"
                                 alt="application development"
                                 width="370"
                                 height="294"
@@ -112,7 +112,7 @@
 
                         <li class="our-work-img">
                             <img
-                                src="/goit-markup-hw-01/images/choosing_colors.jpg"
+                                src="images/studio/choosing_colors.jpg"
                                 alt="choosing colors"
                                 width="370"
                                 height="294"
@@ -125,8 +125,8 @@
             <div class="stuff">
                 <h2 class="our-stuff">Nasz zespół</h2>
                 <ul class="stuff-figures">
-                    <li>
-                        <figure class="stuff-figures-windows">
+                    <li class="stuff-figures-windows">
+                        <figure>
                             <img
                                 src="/goit-markup-hw-01/images/Product_Designer.jpg"
                                 alt="John Doe Product Designer"
@@ -134,14 +134,16 @@
                                 height="260"
                             />
                             <figcaption>
-                                <h4>John Doe</h4>
-                                <p>Product Designer</p>
+                                <h4 class="people">John Doe</h4>
+                                <p class="people-occupation">
+                                    Product Designer
+                                </p>
                             </figcaption>
                         </figure>
                     </li>
 
-                    <li>
-                        <figure class="stuff-figures-windows">
+                    <li class="stuff-figures-windows">
+                        <figure>
                             <img
                                 src="/goit-markup-hw-01/images/Frontend_Developer.jpg"
                                 alt="John Doe Frontend Developer"
@@ -149,14 +151,16 @@
                                 height="260"
                             />
                             <figcaption>
-                                <h4>John Doe</h4>
-                                <p>Frontend Developer</p>
+                                <h4 class="people">John Doe</h4>
+                                <p class="people-occupation">
+                                    Frontend Developer
+                                </p>
                             </figcaption>
                         </figure>
                     </li>
 
-                    <li>
-                        <figure class="stuff-figures-windows">
+                    <li class="stuff-figures-windows">
+                        <figure>
                             <img
                                 src="/goit-markup-hw-01/images/Marketing.jpg"
                                 alt="John Doe Marketing"
@@ -164,13 +168,13 @@
                                 height="260"
                             />
                             <figcaption>
-                                <h4>John Doe</h4>
-                                <p>Marketing</p>
+                                <h4 class="people">John Doe</h4>
+                                <p class="people-occupation">Marketing</p>
                             </figcaption>
                         </figure>
                     </li>
 
-                    <li>
+                    <li class="stuff-figures-windows">
                         <figure>
                             <img
                                 src="/goit-markup-hw-01/images/UI_Designer.jpg"
@@ -179,8 +183,8 @@
                                 height="260"
                             />
                             <figcaption>
-                                <h4>John Doe</h4>
-                                <p>UI Designer</p>
+                                <h4 class="people">John Doe</h4>
+                                <p class="people-occupation">UI Designer</p>
                             </figcaption>
                         </figure>
                     </li>
