--- a/portfolio.html
+++ b/portfolio.html
@@ -34,15 +34,35 @@
             </div>
         </header>
         <main>
-            <ul>
-                <li><button type="button">Wszystkie</button></li>
-                <li><button type="button">Strony</button></li>
-                <li><button type="button">Aplikacje</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
+            <ul class="button-portfolio-all">
+                <li>
+                    <button class="button-portfolio" type="button">
+                        Wszystkie
+                    </button>
+                </li>
+                <li>
+                    <button class="button-portfolio" type="button">
+                        Strony
+                    </button>
+                </li>
+                <li>
+                    <button class="button-portfolio" type="button">
+                        Aplikacje
+                    </button>
+                </li>
+                <li>
+                    <button class="button-portfolio" type="button">
+                        Design
+                    </button>
+                </li>
+                <li>
+                    <button class="button-portfolio" type="button">
+                        Marketing
+                    </button>
+                </li>
             </ul>
 
-            <ul>
+            <ul class="check-portfolio">
                 <li>
                     <figure>
                         <img
