--- a/index.html
+++ b/index.html
@@ -133,12 +133,14 @@
                                 width="270"
                                 height="260"
                             />
-                            <figcaption>
-                                <h4 class="people">John Doe</h4>
-                                <p class="people-occupation">
-                                    Product Designer
-                                </p>
-                            </figcaption>
+                            <div class="main-figcaption">
+                                <figcaption>
+                                    <h4 class="people">John Doe</h4>
+                                    <p class="people-occupation">
+                                        Product Designer
+                                    </p>
+                                </figcaption>
+                            </div>
                         </figure>
                     </li>
 
