--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 <h2 class="our-stuff">Nasz zespół</h2>
                 <div class="main-figcaption">
                     <ul class="stuff-figures">
-                        <li class="stuff-figures-windows">
-                            <figure>
+                        <li>
+                            <figure class="stuff-figures-windows">
                                 <img
                                     src="/goit-markup-hw-01/images/Product_Designer.jpg"
                                     alt="John Doe Product Designer"
@@ -143,8 +143,8 @@
                             </figure>
                         </li>
 
-                        <li class="stuff-figures-windows">
-                            <figure>
+                        <li>
+                            <figure class="stuff-figures-windows">
                                 <img
                                     src="/goit-markup-hw-01/images/Frontend_Developer.jpg"
                                     alt="John Doe Frontend Developer"
@@ -160,8 +160,8 @@
                             </figure>
                         </li>
 
-                        <li class="stuff-figures-windows">
-                            <figure>
+                        <li>
+                            <figure class="stuff-figures-windows">
                                 <img
                                     src="/goit-markup-hw-01/images/Marketing.jpg"
                                     alt="John Doe Marketing"
@@ -175,8 +175,8 @@
                             </figure>
                         </li>
 
-                        <li class="stuff-figures-windows">
-                            <figure>
+                        <li>
+                            <figure class="stuff-figures-windows">
                                 <img
                                     src="/goit-markup-hw-01/images/UI_Designer.jpg"
                                     alt="John Doe UI Designer"
