--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 
             <div class="stuff">
                 <h2 class="our-stuff">Nasz zespół</h2>
-                <div class="main-figcaption">
+                <div>
                     <ul class="stuff-figures">
                         <li>
                             <figure class="stuff-figures-windows">
                                 <img
-                                    src="/goit-markup-hw-01/images/Product_Designer.jpg"
+                                    src="images/studio/Product_Designer.jpg"
                                     alt="John Doe Product Designer"
                                     width="270"
                                     height="260"
@@ -146,7 +146,7 @@
                         <li>
                             <figure class="stuff-figures-windows">
                                 <img
-                                    src="/goit-markup-hw-01/images/Frontend_Developer.jpg"
+                                    src="images/studio/Frontend_Developer.jpg"
                                     alt="John Doe Frontend Developer"
                                     width="270"
                                     height="260"
@@ -163,7 +163,7 @@
                         <li>
                             <figure class="stuff-figures-windows">
                                 <img
-                                    src="/goit-markup-hw-01/images/Marketing.jpg"
+                                    src="images/studio/Marketing.jpg"
                                     alt="John Doe Marketing"
                                     width="270"
                                     height="260"
@@ -178,7 +178,7 @@
                         <li>
                             <figure class="stuff-figures-windows">
                                 <img
-                                    src="/goit-markup-hw-01/images/UI_Designer.jpg"
+                                    src="images/studio/UI_Designer.jpg"
                                     alt="John Doe UI Designer"
                                     width="270"
                                     height="260"
