--- a/portfolio.html
+++ b/portfolio.html
@@ -36,168 +36,208 @@
         <main>
             <ul class="button-portfolio-all">
                 <li>
-                    <button class="button-portfolio" type="button">
+                    <button
+                        class="button-portfolio"
+                        onclick="alert('klikam')"
+                        type="button"
+                    >
                         Wszystkie
                     </button>
                 </li>
                 <li>
-                    <button class="button-portfolio" type="button">
+                    <button
+                        class="button-portfolio"
+                        onclick="alert('klikam')"
+                        type="button"
+                    >
                         Strony
                     </button>
                 </li>
                 <li>
-                    <button class="button-portfolio" type="button">
+                    <button
+                        class="button-portfolio"
+                        onclick="alert('klikam')"
+                        type="button"
+                    >
                         Aplikacje
                     </button>
                 </li>
                 <li>
-                    <button class="button-portfolio" type="button">
+                    <button
+                        class="button-portfolio"
+                        onclick="alert('klikam')"
+                        type="button"
+                    >
                         Design
                     </button>
                 </li>
                 <li>
-                    <button class="button-portfolio" type="button">
+                    <button
+                        class="button-portfolio"
+                        onclick="alert('klikam')"
+                        type="button"
+                    >
                         Marketing
                     </button>
                 </li>
             </ul>
 
-            <ul class="check-portfolio">
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Technocrack.jpg"
-                            alt="Technocrack"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Technocrack</h4>
-                            <p>Strona internetowa</p>
-                        </figcaption>
-                    </figure>
-                </li>
+            <div>
+                <ul class="check-portfolio">
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Technocrack.jpg"
+                                alt="Technocrack"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Technocrack
+                                </h4>
+                                <p class="portfolio-text">Strona internetowa</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Grafika_New_Orlean.jpg"
-                            alt="Grafika New Orlean vs Golden Star"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Grafika New Orlean vs Golden Star</h4>
-                            <p>Design</p>
-                        </figcaption>
-                    </figure>
-                </li>
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Grafika_New_Orlean.jpg"
+                                alt="Grafika New Orlean vs Golden Star"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Grafika New Orlean vs Golden Star
+                                </h4>
+                                <p class="portfolio-text">Design</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Restauracja_Seafood.jpg"
-                            alt="Restauracja Seafood"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Restauracja Seafood</h4>
-                            <p>Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Restauracja_Seafood.jpg"
+                                alt="Restauracja Seafood"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Restauracja Seafood
+                                </h4>
+                                <p class="portfolio-text">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Projekt_Prime.jpg"
-                            alt="Projekt Prime"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Projekt Prime</h4>
-                            <p>Marketing</p>
-                        </figcaption>
-                    </figure>
-                </li>
+                    <li>
+                        <figure class="">
+                            <img
+                                src="images/portfolio/Projekt_Prime.jpg"
+                                alt="Projekt Prime"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Projekt Prime
+                                </h4>
+                                <p class="portfolio-text">Marketing</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Projekt_Boxes.jpg"
-                            alt="Projekt Boxes"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Projekt Boxes</h4>
-                            <p>Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Projekt_Boxes.jpg"
+                                alt="Projekt Boxes"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Projekt Boxes
+                                </h4>
+                                <p class="portfolio-text">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Inspiration.jpg"
-                            alt="Inspiration has no Borders"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Inspiration has no Borders</h4>
-                            <p>Strona internetowa</p>
-                        </figcaption>
-                    </figure>
-                </li>
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Inspiration.jpg"
+                                alt="Inspiration has no Borders"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Inspiration has no Borders
+                                </h4>
+                                <p class="portfolio-text">Strona internetowa</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Magazyn.jpg"
-                            alt="Magazyn Limited Edition"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Magazyn Limited Edition</h4>
-                            <p>Design</p>
-                        </figcaption>
-                    </figure>
-                </li>
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Magazyn.jpg"
+                                alt="Magazyn Limited Edition"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Magazyn Limited Edition
+                                </h4>
+                                <p class="portfolio-text">Design</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Projekt_LAB.jpg"
-                            alt="Projekt LAB"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Projekt LAB</h4>
-                            <p>Marketing</p>
-                        </figcaption>
-                    </figure>
-                </li>
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Projekt_LAB.jpg"
+                                alt="Projekt LAB"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Projekt LAB
+                                </h4>
+                                <p class="portfolio-text">Marketing</p>
+                            </figcaption>
+                        </figure>
+                    </li>
 
-                <li>
-                    <figure>
-                        <img
-                            src="/goit-markup-hw-02/images/portfolio/Growin_Buisness.jpg"
-                            alt="Growing Business"
-                            width="370"
-                            height="294"
-                        />
-                        <figcaption>
-                            <h4>Growing Business</h4>
-                            <p>Aplikacja</p>
-                        </figcaption>
-                    </figure>
-                </li>
-            </ul>
+                    <li>
+                        <figure class="portfolio-things">
+                            <img
+                                src="images/portfolio/Growin_Buisness.jpg"
+                                alt="Growing Business"
+                                width="370"
+                                height="294"
+                            />
+                            <figcaption>
+                                <h4 class="portfolio-things-tittle">
+                                    Growing Business
+                                </h4>
+                                <p class="portfolio-text">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+            </div>
         </main>
         <footer>
             <h2 id="main-page2">
